added more skeleton code to make structure of the page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,43 @@
   </head>
   <body>
     <header>
-      <main></main>
+      <!-----------------Nav Bar which is a flec container---------------->
+      <nav>
+        <!--------Three divs with anchor id these are the flex items----->
+        <div><a></a></div>
+        <div><a></a></div>
+        <div><a></a></div>
+      </nav>
     </header>
+    <!----Sections like about me with id tags------>
+    <main>
+      <!----three of the sections -------->
+      <!----section 1 needs to tell about myself-->
+      <section id="About Me">
+        <div>
+          <img />
+        </div>
+        <div>
+          <h1></h1>
+          <p></p>
+          <h2></h2>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </section>
+
+      <!--------section 2 my projects which will contsin the larger card image-->
+      <section id="Projects">
+        <h2></h2>
+        <div></div>
+      </section>
+
+      <!---------section 3 will contain my icons and contact details------>
+      <section id="Contact"></section>
+    </main>
     <footer></footer>
   </body>
 </html>
