added the final skeleton code and the comments to guide me through

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   </head>
   <body>
     <header>
-      <!-----------------Nav Bar which is a flec container---------------->
+      <!--------Nav Bar which is a flex container------>
       <nav>
         <!--------Three divs with anchor id these are the flex items----->
-        <div><a></a></div>
-        <div><a></a></div>
-        <div><a></a></div>
+        <div><a href="" class=""></a>></div>
+        <div><a href="" class=""></a></div>
+        <div><a href="" class=""></a>></div>
       </nav>
     </header>
     <!----Sections like about me with id tags------>
     <main>
-      <!----three of the sections -------->
+      <!----three of the sections ---->
       <!----section 1 needs to tell about myself-->
       <section id="About Me">
         <div>
@@ -37,15 +37,123 @@
         </div>
       </section>
 
-      <!--------section 2 my projects which will contsin the larger card image-->
+      <!---section 2 my projects which will contain the larger card image-->
       <section id="Projects">
         <h2></h2>
-        <div></div>
+        <!----first larger image of the projects---->
+        <div>
+          <div>
+            <!-- will need a href anchor tag & image of first project -->
+            <div>
+              <a href="" class=""></a>
+              <img src="" alt="" />
+            </div>
+
+            <div>
+              <h3></h3>
+              <!-- will need link to repository -->
+              <div><a href="" class=""></a></div>
+            </div>
+          </div>
+        </div>
+
+        <!-- rest of the projects  -->
+        <!-- these divs are flex items -->
+
+        <!-- project 2--->
+        <div>
+          <div>
+            <a href="" class=""></a>
+            <img src="" alt="" />
+          </div>
+
+          <div>
+            <h3></h3>
+            <p></p>
+          </div>
+        </div>
+
+        <!-- project 3 -->
+        <div>
+          <div>
+            <a href="" class=""></a>
+            <img src="" alt="" />
+          </div>
+
+          <div>
+            <h3></h3>
+            <p></p>
+          </div>
+        </div>
+
+        <!-- project 4 -->
+        <div>
+          <div>
+            <a href="" class=""></a>
+            <img src="" alt="" />
+          </div>
+
+          <div>
+            <h3></h3>
+            <p></p>
+          </div>
+        </div>
+
+        <!-- project 5 -->
+        <div>
+          <div>
+            <a href="" class=""></a>
+            <img src="" alt="" />
+          </div>
+
+          <div>
+            <h3></h3>
+            <p></p>
+          </div>
+        </div>
+
+        <!-- project 6 -->
+        <div>
+          <div>
+            <a href="" class=""></a>
+            <img src="" alt="" />
+          </div>
+
+          <div>
+            <h3></h3>
+            <p></p>
+          </div>
+        </div>
       </section>
 
       <!---------section 3 will contain my icons and contact details------>
-      <section id="Contact"></section>
+      <section id="Contact">
+        <h2></h2>
+        <!-- flex container -->
+        <!-- the font awesome icons are these links -->
+        <div>
+          <div>
+            <a href="" class=""></a>
+            <img src="" alt="" />
+          </div>
+
+          <div>
+            <a href="" class=""></a>
+            <img src="" alt="" />
+          </div>
+
+          <div>
+            <a href="" class=""></a>
+            <img src="" alt="" />
+          </div>
+        </div>
+      </section>
+      <!-- end of the sections all -->
     </main>
-    <footer></footer>
+
+    <footer>
+      <h4></h4>
+      <p></p>
+    </footer>
   </body>
 </html>
