placed all the classes onto the elements relevant to each part of the page

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Personal Portfolio Page</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <!--------Nav Bar which is a flex container------>
-      <nav>
+      <nav class="nav-container">
         <!--------Three divs with anchor id these are the flex items----->
         <div><a href="" class=""></a>></div>
         <div><a href="" class=""></a></div>
@@ -18,7 +18,7 @@
       </nav>
     </header>
     <!----Sections like about me with id tags------>
-    <main>
+    <main class="main-container">
       <!----three of the sections ---->
       <!----section 1 needs to tell about myself-->
       <section id="About Me">
@@ -61,65 +61,65 @@
         <!-- these divs are flex items -->
 
         <!-- project 2--->
-        <div>
-          <div>
+        <div class="project">
+          <div class="flex-item">
             <a href="" class=""></a>
             <img src="" alt="" />
           </div>
 
-          <div>
+          <div class="project-h">
             <h3></h3>
             <p></p>
           </div>
         </div>
 
         <!-- project 3 -->
-        <div>
-          <div>
+        <div class="project">
+          <div class="flex-item">
             <a href="" class=""></a>
             <img src="" alt="" />
           </div>
 
-          <div>
+          <div class="project-h">
             <h3></h3>
             <p></p>
           </div>
         </div>
 
         <!-- project 4 -->
-        <div>
-          <div>
+        <div class="project">
+          <div class="flex-items">
             <a href="" class=""></a>
             <img src="" alt="" />
           </div>
 
-          <div>
+          <div class="project-h">
             <h3></h3>
             <p></p>
           </div>
         </div>
 
         <!-- project 5 -->
-        <div>
-          <div>
+        <div class="project">
+          <div class="flex-items">
             <a href="" class=""></a>
             <img src="" alt="" />
           </div>
 
-          <div>
+          <div class="project-h">
             <h3></h3>
             <p></p>
           </div>
         </div>
 
         <!-- project 6 -->
-        <div>
-          <div>
+        <div class="project">
+          <div class="flex-items">
             <a href="" class=""></a>
             <img src="" alt="" />
           </div>
 
-          <div>
+          <div class="project-h">
             <h3></h3>
             <p></p>
           </div>
@@ -151,7 +151,7 @@
       <!-- end of the sections all -->
     </main>
 
-    <footer>
+    <footer class="footer">
       <h4></h4>
       <p></p>
     </footer>
