added some font awesome icons, about section and photo image

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Personal Portfolio Page</title>
   </head>
@@ -23,11 +27,20 @@
       <!----section 1 needs to tell about myself-->
       <section id="About Me">
         <div>
-          <img />
+          <img src="./assets/images/1613837040274.jpeg" />
         </div>
         <div>
-          <h1></h1>
-          <p></p>
+          <h1>About Me</h1>
+          <p>
+            I am Rukhsana a software developer based in Birmingham, coming from
+            a strong client facing background within the retail and property
+            sector I have made the jump to software and am really enjoying this
+            journey and am excited for the future of code. I currently work for
+            one of the largest Software providers in the UK where our solutions
+            improve the lives of millions of people every day. In my spare time
+            I love eating and sharing my marvelous food creations and going to
+            the gym to so I can eat more of them!
+          </p>
           <h2></h2>
           <ul>
             <li></li>
@@ -39,7 +52,7 @@
 
       <!---section 2 my projects which will contain the larger card image-->
       <section id="Projects">
-        <h2></h2>
+        <h2>My Projects</h2>
         <!----first larger image of the projects---->
         <div>
           <div>
@@ -128,22 +141,31 @@
 
       <!---------section 3 will contain my icons and contact details------>
       <section id="Contact">
-        <h2></h2>
+        <h2>Connect With Me</h2>
         <!-- flex container -->
         <!-- the font awesome icons are these links -->
         <div>
           <div>
-            <a href="" class=""></a>
+            <a href="https://github.com/roxywasiak" class="icon">
+              <i class="fa-brands fa-github-alt"></i>
+            </a>
             <img src="" alt="" />
           </div>
 
           <div>
-            <a href="" class=""></a>
+            <a
+              href="https://www.linkedin.com/in/rukhsana-wasiak-43561a94/"
+              class="icon"
+            >
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
             <img src="" alt="" />
           </div>
 
           <div>
-            <a href="" class=""></a>
+            <a href="mailto:ruksclone@hotmail.com" class="icon">
+              <i class="fa-solid fa-envelope"></i>
+            </a>
             <img src="" alt="" />
           </div>
         </div>
