added the images with alt tags

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             I love eating and sharing my marvelous food creations and going to
             the gym to so I can eat more of them!
           </p>
-          <h2></h2>
+          <h2>My Skills</h2>
           <ul>
             <li></li>
             <li></li>
@@ -53,18 +53,21 @@
       <!---section 2 my projects which will contain the larger card image-->
       <section id="Projects">
         <h2>My Projects</h2>
-        <!----first larger image of the projects---->
+        <!----first larger image of the project horiseon---->
         <div>
           <div>
             <!-- will need a href anchor tag & image of first project -->
             <div>
               <a href="" class=""></a>
-              <img src="" alt="" />
+              <img
+                src="./assets/images/marketing.jpeg"
+                alt="image of marketing materials"
+              />
             </div>
 
             <div>
               <h3></h3>
-              <!-- will need link to repository -->
+              <!-- will need link to website via github pages -->
               <div><a href="" class=""></a></div>
             </div>
           </div>
@@ -73,11 +76,14 @@
         <!-- rest of the projects  -->
         <!-- these divs are flex items -->
 
-        <!-- project 2--->
+        <!-- project 2 portfolio--->
         <div class="project">
           <div class="flex-item">
             <a href="" class=""></a>
-            <img src="" alt="" />
+            <img
+              src="./assets/images/portfolio.jpeg"
+              alt="image of portfolio of projects"
+            />
           </div>
 
           <div class="project-h">
@@ -86,24 +92,14 @@
           </div>
         </div>
 
-        <!-- project 3 -->
-        <div class="project">
-          <div class="flex-item">
-            <a href="" class=""></a>
-            <img src="" alt="" />
-          </div>
-
-          <div class="project-h">
-            <h3></h3>
-            <p></p>
-          </div>
-        </div>
-
-        <!-- project 4 -->
+        <!-- project 3  password generator-->
         <div class="project">
           <div class="flex-items">
             <a href="" class=""></a>
-            <img src="" alt="" />
+            <img
+              src="/assets/images/passwordgen.jpeg"
+              alt="image of padlock for password generator"
+            />
           </div>
 
           <div class="project-h">
@@ -112,11 +108,14 @@
           </div>
         </div>
 
-        <!-- project 5 -->
+        <!-- project 4  code quiz -->
         <div class="project">
           <div class="flex-items">
             <a href="" class=""></a>
-            <img src="" alt="" />
+            <img
+              src="./assets/images/codequiz.jpeg"
+              alt="image of icons showing quiz like scenario"
+            />
           </div>
 
           <div class="project-h">
@@ -125,11 +124,46 @@
           </div>
         </div>
 
-        <!-- project 6 -->
+        <!-- project 5 day planner-->
         <div class="project">
           <div class="flex-items">
             <a href="" class=""></a>
-            <img src="" alt="" />
+            <img
+              src="./assets/images/dayplanner.jpeg"
+              alt="image of a diary with planning"
+            />
+          </div>
+
+          <div class="project-h">
+            <h3></h3>
+            <p></p>
+          </div>
+        </div>
+
+        <!-- project 6 weather dashboard-->
+        <div class="project">
+          <div class="flex-items">
+            <a href="" class=""></a>
+            <img
+              src="./assets/images/weatherdash.jpeg"
+              alt="weather dashboard image"
+            />
+          </div>
+
+          <div class="project-h">
+            <h3></h3>
+            <p></p>
+          </div>
+        </div>
+
+        <!-- project 7 group project 1-->
+        <div class="project">
+          <div class="flex-items">
+            <a href="" class=""></a>
+            <img
+              src="./assets/images/groupproject.jpeg"
+              alt="image of people in a group working on a project"
+            />
           </div>
 
           <div class="project-h">
