i added borders and hooked up my classes in my css

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
       <!--------Nav Bar which is a flex container------>
       <nav class="nav-container">
         <!--------Three divs with anchor id these are the flex items----->
-        <div><a href="" class=""></a>></div>
-        <div><a href="" class=""></a></div>
-        <div><a href="" class=""></a>></div>
+        <div><a href="#About-Me" class="links">About Me</a></div>
+        <div><a href="#Projects" class="links">My Projects</a></div>
+        <div><a href="#Contact" class="links">Connect With Me</a></div>
       </nav>
     </header>
     <!----Sections like about me with id tags------>
     <main class="main-container">
       <!----three of the sections ---->
       <!----section 1 needs to tell about myself-->
-      <section id="About Me">
+      <section id="About-Me">
         <div>
           <img src="./assets/images/1613837040274.jpeg" />
         </div>
@@ -58,7 +58,7 @@
           <div>
             <!-- will need a href anchor tag & image of first project -->
             <div>
-              <a href="" class=""></a>
+              <a href="" class="mainproject"></a>
               <img
                 src="./assets/images/marketing.jpeg"
                 alt="image of marketing materials"
