I have added more styling and positioned my header and nav links along with my images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!--------Nav Bar which is a flex container------>
       <nav class="nav-container">
         <!--------Three divs with anchor id these are the flex items----->
-        <div><a href="#About-Me" class="links">About Me</a></div>
+        <div><a href="#About-me" class="links">About Me</a></div>
         <div><a href="#Projects" class="links">My Projects</a></div>
         <div><a href="#Contact" class="links">Connect With Me</a></div>
       </nav>
@@ -25,27 +25,41 @@
     <main class="main-container">
       <!----three of the sections ---->
       <!----section 1 needs to tell about myself-->
-      <section id="About-Me">
+      <section id="About-me">
         <div>
-          <img src="./assets/images/1613837040274.jpeg" />
+          <img
+            src="./assets/images/1613837040274.jpeg"
+            alt="image of a lady seated"
+            class="myphoto"
+          />
         </div>
         <div>
           <h1>About Me</h1>
           <p>
-            I am Rukhsana a software developer based in Birmingham, coming from
-            a strong client facing background within the retail and property
-            sector I have made the jump to software and am really enjoying this
-            journey and am excited for the future of code. I currently work for
-            one of the largest Software providers in the UK where our solutions
-            improve the lives of millions of people every day. In my spare time
-            I love eating and sharing my marvelous food creations and going to
-            the gym to so I can eat more of them!
+            I am Rukhsana Wasiak a software developer based in Birmingham,
+            coming from a strong client facing background within the retail and
+            property sector I have made the jump to software and am really
+            enjoying this journey,I am excited for the future of code. I
+            currently work for one of the largest Software providers in the UK
+            where our solutions improve the lives of millions of people every
+            day. In my spare time I love eating and sharing my marvelous food
+            creations and going to the gym to so I can eat more of them!
           </p>
           <h2>My Skills</h2>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>JavaScript</li>
+            <li>JQuery</li>
+            <li>Bootstrap</li>
+            <li>Express.js</li>
+            <li>React.js</li>
+            <li>Node.js</li>
+            <li>Database Theory</li>
+            <li>MongoDB</li>
+            <li>MySQL</li>
+            <li>Git</li>
+            <li>API's</li>
           </ul>
         </div>
       </section>
@@ -58,7 +72,7 @@
           <div>
             <!-- will need a href anchor tag & image of first project -->
             <div>
-              <a href="" class="mainproject"></a>
+              <a href="" class="main-project"></a>
               <img
                 src="./assets/images/marketing.jpeg"
                 alt="image of marketing materials"
@@ -66,7 +80,11 @@
             </div>
 
             <div>
-              <h3></h3>
+              <h3>Marketing Agency Website</h3>
+              <p>
+                A static marketing agency website project made using HTML and
+                CSS
+              </p>
               <!-- will need link to website via github pages -->
               <div><a href="" class=""></a></div>
             </div>
@@ -79,7 +97,7 @@
         <!-- project 2 portfolio--->
         <div class="project">
           <div class="flex-item">
-            <a href="" class=""></a>
+            <a href="" class="flex-items"></a>
             <img
               src="./assets/images/portfolio.jpeg"
               alt="image of portfolio of projects"
@@ -87,8 +105,10 @@
           </div>
 
           <div class="project-h">
-            <h3></h3>
-            <p></p>
+            <h3>Personal Portfolio Website</h3>
+            <p>
+              A personal portfolio website to display my skills and interests
+            </p>
           </div>
         </div>
 
@@ -103,8 +123,8 @@
           </div>
 
           <div class="project-h">
-            <h3></h3>
-            <p></p>
+            <h3>Random Password Generator</h3>
+            <p>A random password generator using JavaScript</p>
           </div>
         </div>
 
@@ -119,13 +139,14 @@
           </div>
 
           <div class="project-h">
-            <h3></h3>
-            <p></p>
+            <h3>A Code Quiz Application</h3>
+            <p>A code quiz using various technologies</p>
           </div>
         </div>
 
         <!-- project 5 day planner-->
         <div class="project">
+          <!-- could potentially get rid of this div and place flex items into href class -->
           <div class="flex-items">
             <a href="" class=""></a>
             <img
@@ -135,10 +156,27 @@
           </div>
 
           <div class="project-h">
+            <h3>Day planner Application</h3>
+            <p>An application to help you better plan your day ahead</p>
+          </div>
+        </div>
+
+        <!-- <div class="project">
+      
+            <a href="" class="flex-items">
+              <img
+                src="./assets/images/dayplanner.jpeg"
+                alt="image of a diary with planning"
+              />
+            </a>
+          </div>
+
+          <div class="project-h">
             <h3></h3>
             <p></p>
           </div>
-        </div>
+ 
+        </div> -->
 
         <!-- project 6 weather dashboard-->
         <div class="project">
@@ -151,8 +189,11 @@
           </div>
 
           <div class="project-h">
-            <h3></h3>
-            <p></p>
+            <h3>A weather Dashboard</h3>
+            <p>
+              A weather dashboard for a quick summary of weather for your
+              location
+            </p>
           </div>
         </div>
 
@@ -167,8 +208,11 @@
           </div>
 
           <div class="project-h">
-            <h3></h3>
-            <p></p>
+            <h3>Group Project 1</h3>
+            <p>
+              A group project showcasing front end technologies and back end
+              technologies and frameworks
+            </p>
           </div>
         </div>
       </section>
@@ -208,8 +252,7 @@
     </main>
 
     <footer class="footer">
-      <h4></h4>
-      <p></p>
+      <h4>Coded with ♡ by Rukhsana Wasiak</h4>
     </footer>
   </body>
 </html>
