styled the images and added the fonts and tried different layouts to see how the page flows

--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- font awesome  -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
+    <!-- some fonts from google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow&family=PT+Serif&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow&family=PT+Serif&family=Source+Serif+Pro:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <!-- my stylesheet -->
     <link rel="stylesheet" href="./assets/css/style.css" />
+
     <title>Personal Portfolio Page</title>
   </head>
   <body>
@@ -33,6 +49,7 @@
             class="myphoto"
           />
         </div>
+
         <div>
           <h1>About Me</h1>
           <p>
