changed my icon colours and added a margin to the body as the header had a big white gap

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </nav>
     </header>
     <!----Sections like about me with id tags------>
-    <main class="main-container">
+    <main>
       <!----three of the sections ---->
       <!----section 1 needs to tell about myself-->
       <section id="About-me">
