i have added more styling , adjusted some of my font sizes, fixed the icons to be horizontal, adjusted some of my classes which were not in use

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <nav class="nav-container">
         <!--------Three divs with anchor id these are the flex items----->
         <div><a href="#About-me" class="links">About Me</a></div>
-        <div><a href="#Projects" class="links">My Projects</a></div>
+        <div><a href="#my-projects" class="links">My Projects</a></div>
         <div><a href="#Contact" class="links">Contact Me</a></div>
       </nav>
     </header>
@@ -89,8 +89,8 @@
       </section>
 
       <!---section 2 my projects which will contain the larger card image-->
-      <div class="Projects">
-        <h2>My Projects</h2>
+      <div class="projects">
+        <h2 id="my-projects">My Projects</h2>
         <!----first larger image of the project horiseon---->
         <div>
           <div>
@@ -121,7 +121,7 @@
       <!-- project 2 portfolio--->
       <section id="cards">
         <div class="project">
-          <div class="flex-item">
+           <div class="flex-item"> 
             <a href="https://github.com/roxywasiak/personal-portfolio-project/tree/dev"  target="-blank" >
             <img
               src="./assets/images/portfolio.jpeg"
@@ -140,12 +140,12 @@
         <!-- project 3  password generator-->
         
         <div class="project">
-          <div class="flex-item">
-            <a href="" class=""></a>
+          <div class="flex-item"> 
+            <a href="" target="-blank">
             <img
               src="/assets/images/passwordgen.jpeg"
               alt="image of padlock for password generator"
-            />
+            /></a>
           </div>
 
           <div class="project-h">
@@ -156,12 +156,12 @@
 
         <!-- project 4  code quiz -->
         <div class="project">
-          <div class="flex-item">
-            <a href="" class=""></a>
+           <div class="flex-item"> 
+            <a href="" target="-blank">
             <img
               src="./assets/images/codequiz.jpeg"
               alt="image of icons showing quiz like scenario"
-            />
+           ></a>
           </div>
 
           <div class="project-h">
@@ -173,12 +173,12 @@
         <!-- project 5 day planner-->
         <div class="project">
           <!-- could potentially get rid of this div and place flex items into href class -->
-          <div class="flex-item">
-            <a href="" class=""></a>
+           <div class="flex-item"> 
+            <a href="" target="-blank">
             <img
               src="./assets/images/dayplanner.jpeg"
               alt="image of a diary with planning"
-            />
+             ></a>
           </div>
 
           <div class="project-h">
@@ -189,12 +189,12 @@
 
         <!-- project 6 weather dashboard-->
         <div class="project">
-          <div class="flex-item">
-            <a href="" class=""></a>
+          <div class="flex-item"> 
+            <a href="" target="-blank">
             <img
               src="./assets/images/weatherdash.jpeg"
               alt="weather dashboard image"
-            />
+             ></a>
           </div>
 
           <div class="project-h">
@@ -208,19 +208,18 @@
 
         <!-- project 7 group project 1-->
         <div class="project">
-          <div class="flex-item">
-            <a href="" class=""></a>
+           <div class="flex-item"> 
+            <a href="" target="-blank">
             <img
               src="./assets/images/groupproject.jpeg"
               alt="image of people in a group working on a project"
-            />
+           ></a>
           </div>
 
           <div class="project-h">
             <h3>Group Project 1</h3>
             <p>
-              A group project showcasing front end technologies and back end
-              technologies and frameworks
+              A group project showcasing front end/ back end technologies and frameworks
             </p>
           </div>
         </div>
@@ -228,24 +227,24 @@
 
       <!---------section 3 will contain my icons and contact details------>
       <section id="Contact">
-        <h2>Connect With Me</h2>
+        <h2>Connect</h2>
         <!-- flex container -->
         <!-- the font awesome icons are these links -->
         <div class="icon">
          <a href="https://github.com/roxywasiak" target="-blank">
-              <i class="fa-brands fa-github-alt"></i>
+              <i class="fa-brands fa-github-alt fa-2x"></i>
             </a>
         </div>
 
           <div class="icon">
              <a href="https://www.linkedin.com/in/rukhsana-wasiak-43561a94/" target="-blank">
-             <i class="fa-brands fa-linkedin"></i>
+             <i class="fa-brands fa-linkedin fa-2x"></i>
             </a>
           </div>
 
           <div class="icon">
            <a href="mailto:ruksclone@hotmail.com"  target="-blank">
-              <i class="fa-solid fa-envelope"></i>
+              <i class="fa-solid fa-envelope fa-2x"></i>
             </a>
           </div>
        </section>
