fixed all ym responsiveness and changed some more classes

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
       <!-- project 2 portfolio--->
         <div class="wrapper">
-           <div class="newcard"> 
+           <div class="new-card"> 
             <a href="https://github.com/roxywasiak/personal-portfolio-project/tree/dev"  target="-blank" >
             <img
               src="./assets/images/portfolio.jpeg"
@@ -141,7 +141,7 @@
         <!-- project 3  password generator-->
         
         <div class="wrapper">
-           <div class="newcard">  
+           <div class="new-card">  
             <a href="" target="-blank">
             <img
               src="/assets/images/passwordgen.jpeg"
@@ -158,7 +158,7 @@
 
         <!-- project 4  code quiz -->
         <div class="wrapper">
-           <div class="newcard"> 
+           <div class="new-card"> 
             <a href="" target="-blank">
             <img
               src="./assets/images/codequiz.jpeg"
@@ -175,7 +175,7 @@
         <!-- project 5 day planner-->
         <div class="wrapper">
           <!-- could potentially get rid of this div and place flex items into href class -->
-           <div class="newcard"> 
+           <div class="new-card"> 
             <a href="" target="-blank">
             <img
               src="./assets/images/dayplanner.jpeg"
@@ -191,7 +191,7 @@
 
         <!-- project 6 weather dashboard-->
         <div class="wrapper">
-          <div class="newcard"> 
+          <div class="new-card"> 
             <a href="" target="-blank">
             <img
               src="./assets/images/weatherdash.jpeg"
@@ -210,7 +210,7 @@
 
         <!-- project 7 group project 1-->
         <div class="wrapper">
-           <div class="newcard"> 
+           <div class="new-card"> 
             <a href="" target="-blank">
             <img
               src="./assets/images/groupproject.jpeg"
