added my desktop screenshot and tried to sort out my responsiveness

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <img
             src="./assets/images/rukhsana.jpg"
             alt="image of a lady standing"
-            class="myphoto"
+            class="my-photo"
           />
         </div>
 
@@ -131,7 +131,7 @@
           <div class="project-h">
             <h3>Personal Portfolio Website</h3>
             <p>
-              A personal portfolio website to display my skills and interests
+              A personal portfolio website to display my skills
             </p>
         
         </div>
@@ -184,7 +184,7 @@
 
           <div class="project-h">
             <h3>Day planner Application</h3>
-            <p>An application to help you better plan your day ahead</p>
+            <p>An application to help plan your day ahead</p>
           </div>
         </div>
 
@@ -201,8 +201,7 @@
           <div class="project-h">
             <h3>A weather Dashboard</h3>
             <p>
-              A weather dashboard for a quick summary of weather for your
-              location
+              A weather dashboard for a summary of weather
             </p>
           </div>
         </div>
@@ -220,7 +219,7 @@
           <div class="project-h">
             <h3>Group Project 1</h3>
             <p>
-              A group project showcasing front end/ back end technologies and frameworks
+              A group project showcasing various technologies
             </p>
           </div>
         </div>
