added my mobile screenshot and the github page one of my photos was not showing so will be pushing and then testing again

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             I am Rukhsana Wasiak software developer based in Birmingham. I
             come from a strong client facing background within the retail and
             property sector and have made the jump to software through studying at
-             The University Of Birmingham Coding Bootcamp.I am really
+             The University Of Birmingham Coding Bootcamp. I am really
             enjoying this journey and I am excited for the future of code. I
             currently work for one of the largest Software providers in the UK
             where our solutions improve the lives of millions of people every
@@ -122,7 +122,7 @@
       <!-- project 2 portfolio--->
         <div class="wrapper">
            <div class="new-card"> 
-            <a href="https://github.com/roxywasiak/personal-portfolio-project/tree/dev"  target="-blank" >
+            <a href=" https://roxywasiak.github.io/personal-portfolio-project/" target="-blank" >
             <img
               src="./assets/images/portfolio.jpeg"
               alt="image of portfolio of projects"
@@ -145,7 +145,7 @@
            <div class="new-card">  
             <a href="" target="-blank">
             <img
-              src="/assets/images/passwordgen.jpeg"
+              src="./assets/images/passwordgen.jpeg"
               alt="image of padlock for password generator"
             /></a>
           </div>
