added my projects and styled the larger card to amek it smaller

--- a/index.html
+++ b/index.html
@@ -64,11 +64,7 @@
             day. In my spare time I love eating and sharing my marvelous food
             creations and going to the gym to so I can eat more of them!
 
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem at provident 
-            obcaecati consequatur libero vero neque, harum earum cupiditate doloremque! Tenetur 
-            consequatur, reprehenderit non sequi repellat blanditiis fugiat deserunt reiciendis.
-
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus commodi modi ratione et molestiae ipsa beatae, quidem quia sapiente, incidunt suscipit tenetur obcaecati sit nobis sunt excepturi, sequi pariatur vitae.
+           
           </p>
           <h2>My Skills</h2>
           <ul class="list">
@@ -93,26 +89,22 @@
       <section class="projects">
         <h2 id="my-projects">My Projects</h2>
         <!----first larger image of the project horiseon---->
-        <div>
-          <div>
-            <!-- will need a href anchor tag & image of first project -->
+        <div class="outerDiv">
+           <!-- will need a href anchor tag & image of first project -->
             <div>
               <a href="https://roxywasiak.github.io/marketing-agency-website" target="-blank"><class="main-project">
               <img
-                src="./assets/images/marketing.jpeg"
+                src="./assets/images/screenshotsnew/marketingproject.png"
                 alt="image of marketing materials"
               /></a>
             </div>
-
-            <div>
-              <h3>Marketing Agency Website</h3>
-              <p>
-                A static marketing agency website project made using HTML and
-                CSS
-              </p>
-            </div>
-
           </div>
+        <div class="firstProject">
+          <h3>Marketing Agency Website</h3>
+          <p>
+            A static marketing agency website project made using HTML and
+            CSS
+          </p>
         </div>
       
 
@@ -145,7 +137,7 @@
            <div class="new-card">  
             <a href="" target="-blank">
             <img
-              src="./assets/images/passwordgen.jpeg"
+              src="./assets/images/screenshotsnew/passwordgen.png"
               alt="image of padlock for password generator"
             /></a>
           </div>
@@ -160,7 +152,7 @@
            <div class="new-card"> 
             <a href="" target="-blank">
             <img
-              src="./assets/images/codequiz.jpeg"
+              src="./assets/images/screenshotsnew/quizstart.png"
               alt="image of icons showing quiz like scenario"
            ></a>
           </div>
@@ -177,7 +169,7 @@
            <div class="new-card"> 
             <a href="" target="-blank">
             <img
-              src="./assets/images/dayplanner.jpeg"
+              src="./assets/images/screenshotsnew/workdaysched.png"
               alt="image of a diary with planning"
              ></a>
           </div>
@@ -211,7 +203,7 @@
            <div class="new-card"> 
             <a href="" target="-blank">
             <img
-              src="./assets/images/groupproject.jpeg"
+              src="./assets/images/screenshotsnew/homepage.png"
               alt="image of people in a group working on a project"
            ></a>
           </div>
